<resources>
    <string name="app_name">woman_and_man</string>
    <string name="factory_mode">"简单工厂模式"</string>
    <string name="agent_mode">"代理模式"</string>

    <string name="add">"加法"</string>
    <string name="sub">"减法"</string>
    <string name="multip">"乘法"</string>
    <string name="divi">"除法"</string>


    <string name="strategy_mode">"策略模式"</string>
    <string name="prices">"单价"</string>
    <string name="number">"数量"</string>
    <string name="ok">"确定"</string>
    <string name="reset">"重置"</string>
    <string name="totle">"总计"</string>

    <string name="deco_mode">"Deco模式"</string>
    <string name="visitor_mode">Visitor模式</string>
    <string name="single_mode">Single模式</string>

</resources>
